Agregado del sistema de busqueda por nombre

--- a/index.html
+++ b/index.html
@@ -154,20 +154,12 @@
             </label>
             <div class="searcher">
                 <h3>Searcher</h3>
-                <table class="search-result">
-                    <tr id="search-result-headers">
-                        <th>nombre</th>
-                        <th>apellido</th>
-                    </tr>
-                    <tr>
-                        <td>lucasaaaaaaaaaa</td>
-                        <td>gomez</td>
-                    </tr>
-                    <tr>
-                        <td>pepe</td>
-                        <td>poncio</td>
-                    </tr>
-                </table>
+                <div class="search-result-container">
+                    <table class="search-result">
+                        <tr id="search-result-headers">
+                        </tr>
+                    </table>
+                </div>
             </div>
         </section>
         
