--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
         
         <div class="team-slots-container">
-            <button class="team-slot actual-slot">+</button>
-            <button class="team-slot">+</button>
-            <button class="team-slot">+</button>
-            <button class="team-slot">+</button>
-            <button class="team-slot">+</button>
-            <button class="team-slot">+</button>
-            <button class="team-slot">+</button>
-            <button class="team-slot">+</button>
+            <button class="team-slot1 actual-slot"><img src="img/Unknown.webp" alt="Unknown TemTem"></button>
+            <button class="team-slot2"><img src="img/Unknown.webp" alt="Unknown TemTem"></button>
+            <button class="team-slot3"><img src="img/Unknown.webp" alt="Unknown TemTem"></button>
+            <button class="team-slot4"><img src="img/Unknown.webp" alt="Unknown TemTem"></button>
+            <button class="team-slot5"><img src="img/Unknown.webp" alt="Unknown TemTem"></button>
+            <button class="team-slot6"><img src="img/Unknown.webp" alt="Unknown TemTem"></button>
+            <button class="team-slot7"><img src="img/Unknown.webp" alt="Unknown TemTem"></button>
+            <button class="team-slot8"><img src="img/Unknown.webp" alt="Unknown TemTem"></button>
         </div>
 
         <section class="team-section">
@@ -60,7 +60,7 @@
                 <span id="number-temtem">00</span>
             </div>
             <div class="image-temtem-container">
-                <img src="img/Unknown.webp" alt="Image of the selected TemTem">
+                <img src="img/Unknown.webp" alt="Image of the selected TemTem" id="image-temtem">
             </div>
             <label for="ability-temtem" class="ability-temtem-container">
                 <h3>Ability</h3>
@@ -68,8 +68,10 @@
             </label>
             <div class="type-temtem-container">
                 <h3>Type: </h3>
-                <img src="img/Unknown.webp" alt="Type number one of the TemTem">
-                <img src="img/Unknown.webp" alt="Type number two of the TemTem">
+                <div id="type-images-container">
+                    <img src="img/Unknown.webp" alt="Type number one of the TemTem">
+                    <img src="img/Unknown.webp" alt="Type number two of the TemTem">
+                </div>
             </div>
             <div class="stats-container">
                 <div class="stats-description">
@@ -85,36 +87,36 @@
                 </div>
                 <div class="stats-base">
                     <h3>BASE</h3>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
+                    <input type="number" value="0" readonly class="stat-base">
+                    <input type="number" value="0" readonly class="stat-base">
+                    <input type="number" value="0" readonly class="stat-base">
+                    <input type="number" value="0" readonly class="stat-base">
+                    <input type="number" value="0" readonly class="stat-base">
+                    <input type="number" value="0" readonly class="stat-base">
+                    <input type="number" value="0" readonly class="stat-base">
+                    <input type="number" value="0" readonly class="stat-base">
                 </div>
                 <div class="stats-tvs-range">
                     <i></i>
-                    <input type="range" min="0" max="500" value="0" disabled>
-                    <input type="range" min="0" max="500" value="0" disabled>
-                    <input type="range" min="0" max="500" value="0" disabled>
-                    <input type="range" min="0" max="500" value="0" disabled>
-                    <input type="range" min="0" max="500" value="0" disabled>
-                    <input type="range" min="0" max="500" value="0" disabled>
-                    <input type="range" min="0" max="500" value="0" disabled>
+                    <input type="range" min="0" max="500" value="0" disabled class="stat-tvs-range1">
+                    <input type="range" min="0" max="500" value="0" disabled class="stat-tvs-range2">
+                    <input type="range" min="0" max="500" value="0" disabled class="stat-tvs-range3">
+                    <input type="range" min="0" max="500" value="0" disabled class="stat-tvs-range4">
+                    <input type="range" min="0" max="500" value="0" disabled class="stat-tvs-range5">
+                    <input type="range" min="0" max="500" value="0" disabled class="stat-tvs-range6">
+                    <input type="range" min="0" max="500" value="0" disabled class="stat-tvs-range7">
                     <p>Remaining TVs</p>
                 </div>
                 <div class="stats-tvs">
                     <h3>TVs</h3>
-                    <input type="number" value="0" min="0" max="500">
-                    <input type="number" value="0" min="0" max="500">
-                    <input type="number" value="0" min="0" max="500">
-                    <input type="number" value="0" min="0" max="500">
-                    <input type="number" value="0" min="0" max="500">
-                    <input type="number" value="0" min="0" max="500">
-                    <input type="number" value="0" min="0" max="500">
-                    <input type="number" value="1000" min="0" max="1000" readonly>
+                    <input type="number" value="0" min="0" max="500" readonly class="stat-tvs1">
+                    <input type="number" value="0" min="0" max="500" readonly class="stat-tvs2">
+                    <input type="number" value="0" min="0" max="500" readonly class="stat-tvs3">
+                    <input type="number" value="0" min="0" max="500" readonly class="stat-tvs4">
+                    <input type="number" value="0" min="0" max="500" readonly class="stat-tvs5">
+                    <input type="number" value="0" min="0" max="500" readonly class="stat-tvs6">
+                    <input type="number" value="0" min="0" max="500" readonly class="stat-tvs7">
+                    <input type="number" value="1000" min="0" max="1000" readonly id="remaining-tvs">
                 </div>
                 <div class="stats-svs">
                     <h3>SVs</h3>
@@ -125,20 +127,16 @@
                     <input type="number" value="50" min="0" max="50" readonly>
                     <input type="number" value="50" min="0" max="50" readonly>
                     <input type="number" value="50" min="0" max="50" readonly>
-                    <label for="max-svs">
-                        <input type="checkbox" name="max-svs" id="max-svs" checked>
-                        Max SVs
-                    </label>
                 </div>
                 <div class="stats-total">
                     <h3>TOTAL</h3>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
-                    <input type="number" value="0" readonly>
+                    <input type="number" value="0" readonly class="stat-total">
+                    <input type="number" value="0" readonly class="stat-total">
+                    <input type="number" value="0" readonly class="stat-total">
+                    <input type="number" value="0" readonly class="stat-total">
+                    <input type="number" value="0" readonly class="stat-total">
+                    <input type="number" value="0" readonly class="stat-total">
+                    <input type="number" value="0" readonly class="stat-total">
                 </div>
             </div>
             <div class="attack-temtem-container">
@@ -152,6 +150,9 @@
                 <h3>Gear</h3>
                 <input type="text" name="gear-temtem" id="gear-temtem" placeholder="[Select one]">
             </label>
+            <div class="wiki-container">
+                <a href="https://temtem.wiki.gg/wiki/Temtem_Wiki" target="_blank" id="wiki-url"><img src="img/wiki.webp" alt="TemTem Wiki"></a>
+            </div>
             <div class="searcher">
                 <h3>Searcher</h3>
                 <div class="search-result-container">
@@ -169,6 +170,8 @@
 
     </main>
 
+    <script src="js/team.js"></script>
+    <script src="js/functions.js"></script>
     <script src="js/main.js"></script>
     <script src="js/teamBuilder.js"></script>
 </body>
